#10 filled dropdown with mock data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,8 @@
   },
   "compileOnSave": false,
   "buildOnSave": false,
-  "atom": { "rewriteTsconfig": false }
+  "atom": { "rewriteTsconfig": false },
+  "types": [
+    "bootstrap"
+  ]
 }
