--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~4.0.1",
     "@angular/upgrade": "~4.0.1",
     "angular-in-memory-web-api": "^0.3.1",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ie-shim": "^0.1.0",
     "reflect-metadata": "^0.1.9",
