--- a/package.json
+++ b/package.json
@@ -1,54 +1,49 @@
 {
-  "name": "TVL",
+  "name": "tvl",
   "version": "0.0.0",
-  "description": "Tagastuste Vormistamise Lahendus",
+  "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && webpack --progress",
-    "watch": "npm run build -- --watch",
-    "server": "webpack-dev-server --inline --progress --port 9000 --content-base src",
-    "start": "npm run server"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@angular/common": "~4.0.1",
-    "@angular/compiler": "~4.0.1",
-    "@angular/compiler-cli": "~4.0.1",
-    "@angular/core": "~4.0.1",
-    "@angular/forms": "~4.0.1",
-    "@angular/http": "~4.0.1",
-    "@angular/platform-browser": "~4.0.1",
-    "@angular/platform-browser-dynamic": "~4.0.1",
-    "@angular/platform-server": "~4.0.1",
-    "@angular/router": "~4.0.1",
-    "@angular/upgrade": "~4.0.1",
-    "angular-in-memory-web-api": "^0.3.1",
-    "bootstrap": "^3.3.7",
+    "@angular/animations": "^4.2.4",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
-    "ie-shim": "^0.1.0",
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@types/node": "^7.0.12",
-    "angular2-router-loader": "^0.3.4",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.1.2",
-    "css-loader": "^0.26.0",
-    "html-webpack-plugin": "^2.28.0",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.4",
-    "to-string-loader": "^1.1.4",
-    "typescript": "~2.2.0",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "2.4.2",
-    "webpack-merge": "^4.1.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Kaspar94/TVL"
-  },
-  "bugs": {
-    "url": "https://github.com/Kaspar94/TVL/issues"
-  },
-  "homepage": "https://github.com/Kaspar94/TVL/home"
+    "@angular/cli": "1.4.4",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/language-service": "^4.2.4",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.2.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.3.3"
+  }
 }
