--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \\\"Error: no tests yet\\\" && exit 1",
-	"start": "nodemon server.js"
+	"start": "nodemon server.js --ignore *.json"
   },
   "repository": {
     "type": "git",
