--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "bcrypt-nodejs": "0.0.3",
     "express": "^4.16.2",
     "passport": "^0.4.0",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "xmlbuilder": "^9.0.4"
   }
 }
