#27 added some backend tests

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Server for TVL app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \\\"Error: no tests yet\\\" && exit 1",
+    "test": "mocha --timeout 10000",
     "start": "nodemon server.js --ignore *.json"
   },
   "repository": {
@@ -27,5 +27,10 @@
     "passport-http": "^0.3.0",
     "xmlbuilder": "^9.0.4",
     "randomstring": "^1.1.5"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   }
 }
