--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "xmlbuilder": "^9.0.4",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "config": "^1.28.1"
   }
 }
