--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@ngx-translate/core": "^8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
     "angular-font-awesome": "^2.0.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "rxjs": "^5.4.2",
+    "save": "^2.3.1",
     "ts-md5": "^1.2.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
