--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,12 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "config": "^1.28.1",
     "express": "^4.16.2",
+    "helmet": "^3.9.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
-    "xmlbuilder": "^9.0.4",
     "randomstring": "^1.1.5",
-    "config": "^1.28.1"
+    "xmlbuilder": "^9.0.4"
   }
 }
