--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "randomstring": "^1.1.5",
-    "xmlbuilder": "^9.0.4"
+    "xmlbuilder": "^9.0.4",
+    "xregexp": "^3.2.0"
   }
 }
