--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "save": "^2.3.1",
     "ts-md5": "^1.2.2",
     "web-animations-js": "^2.3.1",
+    "xregexp": "^3.2.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
